--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,12 +31,14 @@ position:relative;
 width: 35px;
 height: 30px;
 padding:10px;
+
 }
 .Open-Search{
 position:relative;
 width:23px;
 height:23px;
 padding:10px;
+cursor: pointer;
 }
 .Header-Search{
 position:relative;
@@ -49,6 +51,7 @@ font-size: 20px;
 font-weight: 300;
 color: white;
 display: none;
+cursor: pointer;
 }
 //_____________________________________________________________________________________________________________
 
@@ -191,6 +194,7 @@ height: 33px;
 background:white;
 border:none;
 outline: none;
+cursor: pointer;
 }
 .Number{
 position:relative;
@@ -230,7 +234,11 @@ background:#18E044;
 color: white;
 font-size: 18px;
 text-align: center;
-;
+transition: 0.4s;
+cursor: pointer;
+&:hover{
+background:#18e08d;
+}
 }
 
 //_____________________________________________________________________________________________________________
@@ -392,7 +400,7 @@ left:0%;
 width: 25px;
 height: 25px;
 transform: translate(-2em , -1px);
-background: url("../img/Group 21.png") no-repeat 50% 50%/cover;
+background: url("../img/Group 22.png") no-repeat 50% 50%/cover;
 }
 .Nomer3::after{
 content:"";
@@ -402,7 +410,7 @@ left:0%;
 width: 25px;
 height: 25px;
 transform: translate(-2em , -1px);
-background: url("../img/Group 21.png") no-repeat 50% 50%/cover;
+background: url("../img/Group 23.png") no-repeat 50% 50%/cover;
 }
 .Nomer4::after{
 content:"";
@@ -412,7 +420,7 @@ left:0%;
 width: 25px;
 height: 25px;
 transform: translate(-2em , -1px);
-background: url("../img/Group 21.png") no-repeat 50% 50%/cover;
+background: url("../img/Group 24.png") no-repeat 50% 50%/cover;
 }
 .Content4-Product{
 position:relative;
@@ -569,6 +577,7 @@ header{width: 100%;}
 
 @media only screen and (max-width: 570px){
 #Content{width: 100%;}
+#Content2, #Content3, #Content4, #Content5{ width: 100%; margin:20px;}
 .Content-blocks-lenta{}
 .Content-block-lenta{ width:17em; margin:0px; background:url("../img/Rectangle 23.png") no-repeat 50% 50%/100%;}
 .Content-lenta{font-size: 20px;}
@@ -577,16 +586,22 @@ header{width: 100%;}
 .Content-imgg{width: 45%;}
 .Content-img{display: inline-block; width: 25%;}
 .p3{width: 12%;}
-.Conteiner-blocks,.Conteiner-blocks2{width: 100%; text-align:left;}
-.Content-blocks-spisok,.product-coll,.Form-zakaz{margin: 0 auto;}
-.pay{margin:20px;}
+.Conteiner-blocks,.Conteiner-blocks2{width: 100%; text-align:left;  margin: 20px;}
+.Content-blocks-spisok{margin:0px; padding: 0px 25px;}
+.Conteiner-blocks2 ul li{margin-bottom: 20px;}
+.pay{margin: 20px 0px;}
 .Form-zakaz input{width: 100%;}
+.product-coll{margin:20px;}
+.Form-zakaz{width: 100%;}
+.Content-product h6{margin: 20px 0px;}
 
 .Contant2-gallery{justify-content: center;}
 .Contant2-blocks-gallery{width: 100%; text-align: center;}
 .Contant2-imgg{width: 100%;}
-.Contant2-img{display:block; width:100%;}
+.Contant2-img{display: inline-block; width: 49%;}
 .Content3-block-img{width: 100%;}
+.Content4-container ul{margin: 25px 0px;}
+.Content4-container ul li{margin-bottom: 20px;}
 .Content4-Product{flex-direction: column; text-align: center;}
 .Content5-bloks{display: block;}
 }
