--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,26 +31,28 @@ position:relative;
 width: 35px;
 height: 30px;
 padding:10px;
-
+cursor: pointer;
 }
 .Open-Search{
 position:relative;
 width:23px;
 height:23px;
 padding:10px;
-cursor: pointer;
+
 }
-.Header-Search{
+.HeaderSearch{
 position:relative;
-width: 20%;
+width: 100%;
 height: auto;
-border:none;
+border:solid 1px #dfdfdf;
 border-radius: 25px;
-background:lightgrey;
+background:whitesmoke;
 font-size: 20px;
 font-weight: 300;
 color: white;
+outline: none;
 display: none;
+padding:10px;
 cursor: pointer;
 }
 //_____________________________________________________________________________________________________________
@@ -175,6 +177,7 @@ position:relative;
 left: 0%;
 font-size: 18px;
 font-weight: normal;
+text-decoration: line-through;
 color: #A8A8A8;
 }
 }
