--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ header {
   width: 35px;
   height: 30px;
   padding: 10px;
+  cursor: pointer;
 }
 
 .Open-Search {
@@ -51,20 +52,21 @@ header {
   width: 23px;
   height: 23px;
   padding: 10px;
-  cursor: pointer;
 }
 
-.Header-Search {
+.HeaderSearch {
   position: relative;
-  width: 20%;
+  width: 100%;
   height: auto;
-  border: none;
+  border: solid 1px #dfdfdf;
   border-radius: 25px;
-  background: lightgrey;
+  background: whitesmoke;
   font-size: 20px;
   font-weight: 300;
   color: white;
+  outline: none;
   display: none;
+  padding: 10px;
   cursor: pointer;
 }
 
@@ -221,6 +223,7 @@ header {
   left: 0%;
   font-size: 18px;
   font-weight: normal;
+  text-decoration: line-through;
   color: #A8A8A8;
 }
 
