--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   margin: 0px;
   font-family: roboto, Arial, sans-serif, monospace;
@@ -160,6 +161,68 @@ header {
   font-size: 18px;
   font-weight: 500;
   color: white;
+}
+
+.Reitingblock {
+  position: relative;
+  font-size: 30px;
+  display: inline-block;
+}
+.Reitingblock::before {
+  content: "★★★★★";
+  display: block;
+}
+
+.Reiting-Star {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  overflow: hidden;
+}
+
+.Radio-star {
+  position: absolute;
+  width: 0%;
+  height: 0%;
+  opacity: 0;
+  visibility: hidden;
+  top: 0;
+  left: 0;
+}
+
+.label-radio {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 20%;
+          flex: 0 0 20%;
+  height: 100%;
+  cursor: pointer;
+  color: #bdbdbd;
+}
+.label-radio::before {
+  content: "★";
+  display: block;
+  -webkit-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+.Radio-star:checked,
+.Radio-star:checked ~ .label-radio {
+  color: #FFCD1E;
+}
+
+.label-radio:hover,
+.label-radio:hover ~ .label-radio,
+.label-radio:checked ~ .label-radio:hover {
+  color: yellow;
 }
 
 .Content-blocks-gallery {
@@ -428,7 +491,7 @@ header {
   position: relative;
   font-size: 26px;
   font-weight: 500;
-  margin-bottom: 20px;
+  margin: 20px 0px;
 }
 .Content4-container p {
   position: relative;
